--- a/src/main/java/WebMap.html
+++ b/src/main/java/WebMap.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <script
+        type="text/javascript" src="WebMapJS.js">
+    </script>
     <title>First Aid in Flight</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
@@ -25,56 +28,6 @@
     <button name="ButtonNo" onclick="noClick()">No, set new location.</button>
 </p>
 <div id="map"></div>
-<script>
-    // Note: This example requires that you consent to location sharing when
-    // prompted by your browser. If you see the error "The Geolocation service
-    // failed.", it means you probably did not give permission for the browser to
-    // locate you.
-    var map, infoWindow;
-    function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: 41.66, lng: -91.54},
-            zoom: 15
-        });
-        infoWindow = new google.maps.InfoWindow;
-
-        // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-            navigator.geolocation.getCurrentPosition(function(position) {
-                var pos = {
-                    lat: position.coords.latitude,
-                    lng: position.coords.longitude
-                };
-
-                infoWindow.setPosition(pos);
-                infoWindow.setContent('Location found.');
-                infoWindow.open(map);
-                map.setCenter(pos);
-            }, function() {
-                handleLocationError(true, infoWindow, map.getCenter());
-            });
-        } else {
-            // Browser doesn't support Geolocation
-            handleLocationError(false, infoWindow, map.getCenter());
-        }
-    }
-
-    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-            'Error: The Geolocation service failed.' :
-            'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-    }
-
-    function yesClick() {
-        //call PatientRequest with location
-    }
-
-    function noClick() {
-        //prompt user input
-    }
-</script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ-Kk-itsqd04Z5hJtmndjlYa1teL170s&callback=initMap">
 </script>
